# xorg-server

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  GIT-GENERATE-VERSION  Makefile.am  acinclude.m4  configure.ac  cpprules.in  meson.build  meson_options.txt
.gitlab-ci/: debian-install.sh
Xext/: xf86bigfont.c
Xi/: Makefile.am
composite/: compalloc.c  compint.h  compwindow.c
damageext/: damageext.c
dix/: Makefile.am  dispatch.c  dixfonts.c  dixmain.c  dixutils.c  events.c  globals.c  main.c  registry.c  stubmain.c  window.c
doc/: Makefile.am  Xserver.man.pre  c-extensions
doc/man/: Xserver.man
fb/: fb.h
glamor/: glamor_egl.c
glx/: Makefile.am  extension_string.c  extension_string.h  glapi.c  glapi_gentable.c  glapioffsets.h  glxcmds.c  glxcontext.h  glxdri2.c  glxdricommon.c  glxdriswrast.c  glxext.c  glxscreens.c  indirect_dispatch.c  indirect_dispatch.h  indirect_dispatch_swap.c  indirect_size_get.c  indirect_size_get.h  indirect_table.c  rensize.c  single2.c
hw/dmx/: dmxinit.c
hw/dmx/config/: dmxconfig.c  scanner.l  xdmxconfig.c
hw/dmx/doc/: dmx.xml
hw/kdrive/: Makefile.am
hw/kdrive/ephyr/: ephyr.c  ephyrinit.c  hostx.c
hw/kdrive/fake/: Makefile.am  fakeinit.c
hw/kdrive/fbdev/: fbinit.c
hw/kdrive/sdl/: sdl.c
hw/vfb/: InitOutput.c  Makefile.am
hw/xfree86/: Makefile.am  sdksyms.sh
hw/xfree86/common/: xf86Config.c  xf86Events.c  xf86Init.c
hw/xfree86/dri2/: dri2.c  dri2.h  dri2ext.c
hw/xfree86/loader/: loadmod.c
hw/xfree86/man/: xorg.conf.man
hw/xfree86/modes/: xf86Crtc.c
hw/xfree86/os-support/: xf86_OSlib.h
hw/xfree86/os-support/shared/: posix_tty.c  sigio.c
hw/xfree86/parser/: write.c
hw/xnest/: Init.c
hw/xquartz/: Makefile.am  pseudoramiX.c  quartz.c
hw/xquartz/GL/: indirect.c
hw/xquartz/mach-startup/: Makefile.am
hw/xwin/: InitInput.c  InitOutput.c  Makefile.am  XWin.exe.manifest  XWin.man  XWin.man.pre  XWin.rc  XWinrc.man  _usr_X11R6_lib_X11_system.XWinrc  ddraw.h  gen_gl_wrappers.py  gen_wrappers.py  glwindows.h  glwrap.c  indirect.c  layout_mapping_check.c  meson.build  system.XWinrc  taskbar.h  wgl_ext_api.c  wgl_ext_api.h  win.h  winallpriv.c  winauth.c  winblock.c  winclipboard.h  winclipboard_globals.h  winclipboardinit.c  winclipboardtextconv.c  winclipboardthread.c  winclipboardwndproc.c  winclipboardwrappers.c  winclipboardxevents.c  winconfig.c  winconfig.h  wincreatewnd.c  wincursor.c  windialogs.c  windisplay.c  winengine.c  (+50 more)
hw/xwin/dri/: Makefile.am  windowsdri.c  windowsdri.h
hw/xwin/glx/: .gitignore  Makefile.am  dri_helpers.c  dri_helpers.h  expose.c  gen_gl_wrappers.py  glcontextmodes.c  glthunk.c  glwindows.h  glwrap.c  indirect.c  indirect.h  wgl_ext_api.c  winpriv.c
hw/xwin/man/: XWin.man  XWinrc.man
hw/xwin/winclip/: Makefile.am  winclipboard.h  winclipboardtextconv.c  winclipboardthread.c  winclipboardwndproc.c  winclipboardxevents.c  xwinclip.c
hw/xwin/winclipboard/: debug.c  internal.h  meson.build  textconv.c  thread.c  winclipboard.h  wndproc.c  xevents.c  xwinclip.c  xwinclip.man
hw/xwin/wmutil/: Makefile.am  cursor_convert.c  cursor_convert.h  icon_convert.c  icon_convert.h  keyboard.c  keyboard.h  meson.build  mouse.c  mouse.h  scancodes.h  winvkmap.h
include/: Makefile.am  ddxhooks.h  dix-config.h.in  dixmain.h  extinit.h  meson.build  misc.h  opaque.h  os.h  protocol-versions.h  scrnintstr.h  xwin-config.h.in
m4/: dolt.m4
man/: Xserver.man
mi/: miexpose.c  miinitext.c  mioverlay.c  miscrinit.c  misprite.c  miwindow.c
miext/: Makefile.am
miext/damage/: damage.c
miext/rootless/: rootless.h  rootlessCommon.h  rootlessConfig.h  rootlessScreen.c  rootlessWindow.c  rootlessWindow.h
miext/shadow/: shadow.c
os/: Makefile.am  access.c  auth.c  backtrace.c  connection.c  log.c  meson.build  osinit.c  strcasecmp.c  utils.c  xdmcp.c  xsha1.c
pseudoramiX/: Makefile.am  pseudoramiX.c
randr/: rrmonitor.c  rrxinerama.c
test/: Makefile.am  meson.build  simple-xinit.c
test/bigreq/: request-length.c
test/scripts/: build-appveyor.sh  run-piglit.sh  xephyr-glamor-piglit.sh  xinit-piglit-session.sh  xvfb-piglit.sh
xkb/: ddxList.c  ddxLoad.c  xkbInit.c
